@@ -2,6 +2,7 @@ from time import time
 
 from django.contrib.contenttypes.models import ContentType
 from django.core.exceptions import PermissionDenied
+from django.db import transaction
 from django.db.models import Count
 from django.http import Http404, HttpResponse, JsonResponse
 from django.http.request import QueryDict
@@ -541,27 +542,28 @@ def delete(request, page_id):
     if not page.permissions_for_user(request.user).can_delete():
         raise PermissionDenied
 
-    for fn in hooks.get_hooks('before_delete_page'):
-        result = fn(request, page)
-        if hasattr(result, 'status_code'):
-            return result
-
-    next_url = get_valid_next_url_from_request(request)
-
-    if request.method == 'POST':
-        parent_id = page.get_parent().id
-        page.delete()
-
-        messages.success(request, _("Page '{0}' deleted.").format(page.get_admin_display_title()))
-
-        for fn in hooks.get_hooks('after_delete_page'):
+    with transaction.atomic():
+        for fn in hooks.get_hooks('before_delete_page'):
             result = fn(request, page)
             if hasattr(result, 'status_code'):
                 return result
 
-        if next_url:
-            return redirect(next_url)
-        return redirect('wagtailadmin_explore', parent_id)
+        next_url = get_valid_next_url_from_request(request)
+
+        if request.method == 'POST':
+            parent_id = page.get_parent().id
+            page.delete()
+
+            messages.success(request, _("Page '{0}' deleted.").format(page.get_admin_display_title()))
+
+            for fn in hooks.get_hooks('after_delete_page'):
+                result = fn(request, page)
+                if hasattr(result, 'status_code'):
+                    return result
+
+            if next_url:
+                return redirect(next_url)
+            return redirect('wagtailadmin_explore', parent_id)
 
     return render(request, 'wagtailadmin/pages/confirm_delete.html', {
         'page': page,
